--- a/public/css/my-style.css
+++ b/public/css/my-style.css
@@ -1,3 +1,17 @@
 p.lh-none {
     line-height: 18px;
 }
+
+.error-message {
+    width: 100%;
+    margin-top: 0.25rem;
+    font-size: 80%;
+    color: #dc3545;
+}
+
+.valid-message {
+    width: 100%;
+    margin-top: 0.25rem;
+    font-size: 80%;
+    color: #28a745;
+}
