--- a/public/css/my-style.css
+++ b/public/css/my-style.css
@@ -5,13 +5,13 @@ p.lh-none {
 .error-message {
     width: 100%;
     margin-top: 0.25rem;
-    font-size: 80%;
+    font-size: 12px;
     color: #dc3545;
 }
 
 .valid-message {
     width: 100%;
     margin-top: 0.25rem;
-    font-size: 80%;
+    font-size: 12px;
     color: #28a745;
 }
