memperbaiki tampilan tambah kader, serta AdminProfileKaderController

--- a/public/css/my-style.css
+++ b/public/css/my-style.css
@@ -15,3 +15,32 @@ p.lh-none {
     font-size: 12px;
     color: #28a745;
 }
+
+/* autocomplete */
+.autocomplete-suggestions {
+    background: #fff;
+    overflow: auto;
+    font-size: 13px;
+    color: #666;
+    cursor: pointer;
+    box-shadow: 3px 3px 3px rgba(83, 83, 83, 0.1);
+}
+.autocomplete-suggestion {
+    padding: 10px 15px;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.autocomplete-selected {
+    background: #f0f0f0;
+}
+.autocomplete-suggestions strong {
+    font-weight: normal;
+    color: #4556db;
+}
+.autocomplete-group {
+    padding: 10px 15px;
+}
+.autocomplete-group strong {
+    display: block;
+    border-bottom: 1px solid #000;
+}
